# pdxhackerspace-chat-hacksman

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
app/: __init__.py  config.py  llm.py  main.py  models.py  rag.py  storage.py  topics.py
app/static/: app.js  index.html
tests/: test_api.py  test_config.py  test_events_storage.py  test_llm.py  test_rag.py  test_topics.py
